# riktelegrambot

./: CMakeLists.txt  mail.sh  mail.txt  mail1.txt  mail2.sh  mail2.txt  mail3.txt  mailnew.conf  mailnew.count  mailnew.sh  rikmail.conf  rikmail.service  rikmail.timer  rikmailsmtp.service  riktelegram.conf  riktelegram.service  riktelegram.timer  riktelegrambot.service  telegram.sh  uptimer.sh  xyz.openbmc_project.rikmail.service
include/: bot.h  mail.h  rikmail.hpp  riktelegram.hpp
src/: bot.cpp  mail.cpp  mainapp.cpp  rikmail.cpp  riktelegram.cpp
